src/style.css
body {
  font-family: "Barlow Condensed", sans-serif;
}

input {
  border-color: #5585b5;
  border-radius: 5px;
  font-size: 18px;
  margin: 5px;
}

.current-location {
  background: none;
  border: none;
  transition: all 150ms ease-in-out;
}
a.current-location span {
  display: none;
  color: #5585b5;
}
a.current-location:hover span {
  display: block;
  position: absolute;
  left: 45px;
  padding-top: 5px;
  font-size: 13px;
}
h1 {
  font-size: 50px;
}
li {
  list-style: none;
  margin-bottom: 0px;
}

.weather-app {
  margin: 30px auto;
  max-width: 900px;
  display: grid;
}

.search-engine-card {
  border-radius: 3px;
}
.current-weather-card {
  border-radius: 3px;
}
.weather-forecast-card {
  border-radius: 3px;
  margin: 5px 0px;
}
#forecast {
  text-align: center;
}
.celsius {
  text-decoration: none;
  color: black;
}
.fahrenheit {
  text-decoration: none;
  color: black;
}
.celsius:hover {
  text-decoration: none;
  color: black;
}

.active:hover {
  cursor: default;
}

.fahrenheit:hover {
  text-decoration: none;
  color: black;
}
.current-weather-card {
  text-align: right;
}
.current-weather {
  text-align: right;
}

.degrees {
  font-size: 50px;
  line-height: 1;
}
.local-time {
  font-size: 25px;
}
.weather-details {
  text-align: left;
  font-size: 20px;
}

#humidity {
  text-align: right;
}

#wind {
  text-align: right;
}

